--- a/build.gradle
+++ b/build.gradle
@@ -64,10 +64,10 @@ ext {
     compileSdkVersion = 29
     minSdkVersion = 16
     targetSdkVersion = 29
-    versionCode = 23
+    versionCode = 24
 
     buildToolsVersion = "29.0.2"
-    versionName = "3.3.2"
+    versionName = "3.1.3-beam-1"  // Pacific Deep themed version for Beam Merchant
 }
 
 Object getEnvOrDefault(String propertyName, Object defaultValue) {
