--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ allprojects {
     repositories {
         mavenCentral()
         google()
+        maven { url 'https://jitpack.io' }  // For pinpad dependency
         jcenter()
     }
 
